--- a/集成学习/5.10.md
+++ b/集成学习/5.10.md
@@ -16,6 +16,7 @@
 
 #### Stacking
 
+首先训练出多个不同的模型，然后再以之前训练的各个模型的输出作为输入来新训练一个新的模型
 
 ### reference
 
@@ -23,3 +24,14 @@ https://zhuanlan.zhihu.com/p/27689464
 
 
 推荐 ***** https://www.csdn.net/article/2015-03-02/2824069
+
+**** https://vdeamov.github.io/机器学习/2018/08/24/集成学习/
+
+https://blog.csdn.net/zwqjoy/article/details/80431496
+
+http://www.datakit.cn/blog/2014/11/02/Ensemble_learning.html
+
+
+### coding 
+
+https://github.com/vsmolyakov/experiments_with_python/blob/master/chp01/ensemble_methods.ipynb
