--- a/python基础/1.Python基础.md
+++ b/python基础/1.Python基础.md
@@ -59,12 +59,12 @@ Python - 100天从新手到大师 https://github.com/jackfrued/Python-100-Days
 
 有许多安装python的方式，Mac终端输入python可以直接进入python环境，但是有很多依赖的包无法调用，这时候Anaconda是一个非常不错的选择。他集成了python编译环境如Ipython，Spyder，jupyter等，以及上百个常用的python包，自然其要求的存储空间也很大。我们可以根据自己电脑的系统与配置在[Anaconda](https://www.anaconda.com/distribution/#download-section)主页上下载相应的安装文件。
 
-![1](anaconda.png)
+![1](python基础/figures/anaconda.png)
 
 
 目前推荐下载python3版本，因为python2版本已经终止维护了，将来更多的都会转到python3上。下载安装文件500-600M,在安装过程中根据需要点击确定即可，要求空间2G+。下载完成点击Anaconda的巨蟒图标，里面包含了许多的IDE。 
 
-![2](屏幕快照 2019-05-11 下午12.37.38.png)
+![2](python基础/figures/屏幕快照 2019-05-11 下午12.37.38.png)
 
 
 对于python的解释器，终端直接输入python2或python3即可进入相应版本的命令行模式，在Anaconda中，IPython也是选择之一，但是这个更加简洁。但是作为新手入门，大家一般推荐[pycharm](https://www.jetbrains.com/pycharm/),具体可以参考
@@ -121,14 +121,8 @@ print(a)
 这里a可以为任意数字，字符
 等等'''
 ```
-
     这里a可以为任意数字，字符
     这里a可以为任意数字，字符
-
-
-
-
-
     '多行注释\n这里a可以为任意数字，字符\n等等'
 
 
