--- a/python基础/1.Python基础.md
+++ b/python基础/1.Python基础.md
@@ -61,6 +61,11 @@ Python - 100天从新手到大师 https://github.com/jackfrued/Python-100-Days
 
 ![1](python基础/figures/anaconda.png)
 
+![Python招聘需求及薪资待遇Top 10](./res/python-top-10.png)
+
+![](./res/python-bj-salary.png)
+
+![](./res/python-cd-salary.png)
 
 目前推荐下载python3版本，因为python2版本已经终止维护了，将来更多的都会转到python3上。下载安装文件500-600M,在安装过程中根据需要点击确定即可，要求空间2G+。下载完成点击Anaconda的巨蟒图标，里面包含了许多的IDE。 
 
