--- a/周志华西瓜书/Chapter 0.ipynb
+++ b/周志华西瓜书/Chapter 0.ipynb
@@ -27,6 +27,16 @@
     " "
    ]
   }
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 打卡\n",
+    " \n",
+    "Week1. 5.9-5.16 22:00 https://shimo.im/docs/sdVA2B79eU8VD3J2 \n",
+    " "
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
