--- a/李宏毅机器学习/Task 4.ipynb
+++ b/李宏毅机器学习/Task 4.ipynb
@@ -7,12 +7,13 @@
    "source": [
     "## Task 4 P8: Classification : Probabilistic Generative Model\n",
     "\n",
-    "> <font color=#A52A2A size=3> 学习打卡内容：\n",
+    "> <font color=#A52A2A size=3> 学习打卡内容：</font>\n",
     "- 从基础概率推导贝叶斯公式，朴素贝叶斯公式(1)\n",
     "- 学习先验概率(2)\n",
     "- 学习后验概率(3)\n",
     "- 学习LR和linear regreeesion之间的区别(4)\n",
     "- 推导sigmoid function公式(5)\n",
+    "\n",
     "\n",
     "<font color=gray size=3>分类问题是有监督学习的，需要构建输入x的function来得到输出对应的类别class,比如信誉得分问题判断放贷与否，医疗诊断疾病类型，手写字体类别识别或是面部识别等等。</font>\n",
     "\n",
@@ -53,20 +54,20 @@
     "\n",
     "#### 朴素贝叶斯 Naive Bayes Classifier\n",
     "\n",
-    "<font color=gray size=3>对于似然函数模型构建过程中，**假设是多元输入条件独立---朴素贝叶斯**，当然这个假设过强，可以根据经验或者模型需要假设成块独立也可。\n",
+    "<font color=gray size=3>对于似然函数模型构建过程中，**假设是多元输入条件独立---朴素贝叶斯**，当然这个假设过强，可以根据经验或者模型需要假设成块独立也可。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_8.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "\n",
     "#### 数学形式\n",
     "\n",
-    "<font color=gray size=3>对后验分布进行化简，首先得到形式上的**sigmoid函数**，并进一步的将带入正态分布并化简log函数。合并x的系数项及常数得到分类函数--分类边界。\n",
+    "<font color=gray size=3>对后验分布进行化简，首先得到形式上的**sigmoid函数**，并进一步的将带入正态分布并化简log函数。合并x的系数项及常数得到分类函数--分类边界。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_9.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_10.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
-    "<font color=gray size=3>当假设共有协方差结构时，可以进一步化简：\n",
+    "<font color=gray size=3>当假设共有协方差结构时，可以进一步化简：</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_11.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n"
    ]
