--- a/李宏毅机器学习/Task 4.ipynb
+++ b/李宏毅机器学习/Task 4.ipynb
@@ -1,13 +1,12 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Task 4 P8: Classification : Probabilistic Generative Model\n",
     "\n",
-    "> <font color=#A52A2A size=3> 学习打卡内容：</font>\n",
+    "> <font color='#A52A2A' size='3'> 学习打卡内容：</font>\n",
     "- 从基础概率推导贝叶斯公式，朴素贝叶斯公式(1)\n",
     "- 学习先验概率(2)\n",
     "- 学习后验概率(3)\n",
