--- a/李宏毅机器学习/Task 4.ipynb
+++ b/李宏毅机器学习/Task 4.ipynb
@@ -14,37 +14,37 @@
     "- 推导sigmoid function公式(5)\n",
     "\n",
     "\n",
-    "<font color=gray size=3>分类问题是有监督学习的，需要构建输入x的function来得到输出对应的类别class,比如信誉得分问题判断放贷与否，医疗诊断疾病类型，手写字体类别识别或是面部识别等等。</font>\n",
+    "<font color=\"#006666\" size='3'>分类问题是有监督学习的，需要构建输入x的function来得到输出对应的类别class,比如信誉得分问题判断放贷与否，医疗诊断疾病类型，手写字体类别识别或是面部识别等等。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_1.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "\n",
-    "<font color=red size=4>**问题是如何进行分类？**</font>\n",
+    "<font color=\"#006666\" size='4'>**问题是如何进行分类？**</font>\n",
     "\n",
-    "<font color=gray size=3>下图展示了线性可分，但是从左图变为右图过程中，由于一部分噪音点的存在导致了线性可分界面偏移会导致错分。也即面对多分类问题时，线性分类器会出问题。另一种策略是将多分类问题转化为二分类。或者是寻找更好的函数（非线性的），如感知器，SVM等</font>\n",
+    "<font color=\"#006666\" size='3'>下图展示了线性可分，但是从左图变为右图过程中，由于一部分噪音点的存在导致了线性可分界面偏移会导致错分。也即面对多分类问题时，线性分类器会出问题。另一种策略是将多分类问题转化为二分类。或者是寻找更好的函数（非线性的），如感知器，SVM等</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_2.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "\n",
     "### Generative model\n",
     "\n",
-    "<font color=gray size=3>以二分类为例（两个盒子抽球为例），首先我们在哪个盒子中抽是按照一定的偏好的，我们称之为**先验信息prior**，比如$P(B_1)=2/3$,则$P(B_2)=1-P(B_1)=1/3$，而对于两个盒子各自都是抽蓝球是独立的（如图示）该概率是条件概率，我们称之为**似然函数或evidence**，对于最终我们感兴趣的是推出抽蓝球是属于哪个盒子的，用贝叶斯公式可以轻易写出，该部分我们称之为**后验分布 posterior**，他正比于先验乘似然函数。</font>\n",
+    "<font color=\"#000066\" size='3'>以二分类为例（两个盒子抽球为例），首先我们在哪个盒子中抽是按照一定的偏好的，我们称之为**先验信息prior**，比如$P(B_1)=2/3$,则$P(B_2)=1-P(B_1)=1/3$，而对于两个盒子各自都是抽蓝球是独立的（如图示）该概率是条件概率，我们称之为**似然函数或evidence**，对于最终我们感兴趣的是推出抽蓝球是属于哪个盒子的，用贝叶斯公式可以轻易写出，该部分我们称之为**后验分布 posterior**，他正比于先验乘似然函数。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_3.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_4.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "\n",
-    "<font color=gray size=3>对于上述的概率，先验我们可以通过经验进行设定，而似然则需要我们合理的进行建模，比如正态分布假设，也是我们的关键所在，我们通过该模型和一些感兴趣的协变量进行联系。</font>\n",
+    "<font color=\"#000066\" size='3'>对于上述的概率，先验我们可以通过经验进行设定，而似然则需要我们合理的进行建模，比如正态分布假设，也是我们的关键所在，我们通过该模型和一些感兴趣的协变量进行联系。</font>\n",
     "\n",
     "### 混合多元正态分布分类\n",
     "\n",
-    "<font color=gray size=3>形式，见[task 1](https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/1.Task%201.ipynb),对应的有极大似然估计。</font>\n",
+    "<font color=\"#660000\" size='3'>形式，见[task 1](https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/1.Task%201.ipynb),对应的有极大似然估计。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_5.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "\n",
-    "<font color=gray size=3>在不同类别中估计出对应的参数，然后根据贝叶斯公式计算出后验。模型也可以简化假设以减少参数，如不同类别中共有相同的协方差结构。</font>\n",
+    "<font color=\"#660000\" size='3'>在不同类别中估计出对应的参数，然后根据贝叶斯公式计算出后验。模型也可以简化假设以减少参数，如不同类别中共有相同的协方差结构。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_6.png?raw=true\" width=\"500\" align='center'>\n",
     "\n",
@@ -53,20 +53,20 @@
     "\n",
     "#### 朴素贝叶斯 Naive Bayes Classifier\n",
     "\n",
-    "<font color=gray size=3>对于似然函数模型构建过程中，**假设是多元输入条件独立---朴素贝叶斯**，当然这个假设过强，可以根据经验或者模型需要假设成块独立也可。</font>\n",
+    "<font color=\"#660066\" size='3'>对于似然函数模型构建过程中，**假设是多元输入条件独立---朴素贝叶斯**，当然这个假设过强，可以根据经验或者模型需要假设成块独立也可。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_8.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "\n",
     "#### 数学形式\n",
     "\n",
-    "<font color=gray size=3>对后验分布进行化简，首先得到形式上的**sigmoid函数**，并进一步的将带入正态分布并化简log函数。合并x的系数项及常数得到分类函数--分类边界。</font>\n",
+    "<font color=\"#660066\" size='3'>对后验分布进行化简，首先得到形式上的**sigmoid函数**，并进一步的将带入正态分布并化简log函数。合并x的系数项及常数得到分类函数--分类边界。</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_9.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_10.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n",
     "\n",
-    "<font color=gray size=3>当假设共有协方差结构时，可以进一步化简：</font>\n",
+    "<font color=\"#660066\" size='3'>当假设共有协方差结构时，可以进一步化简：</font>\n",
     "\n",
     "<img src=\"https://github.com/ZRChao/Book-reading/blob/master/李宏毅机器学习/figures/P8_11.png?raw=true!\" width=\"500\"  alt=\"1\" align='center'>\n"
    ]
